fix clickability bug on splash page by adding z-index and relative positioning to nav element so that it remains clickable, and unaffected by image overlay

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -5,7 +5,8 @@ nav {
   background-color: hsla(0,0,15%,1);
   font: $normal;
   font-size: 1.3em;
-  z-index: 2000;
+  z-index: 80;
+  position: relative;
 
 
   .inner {
